[feat] create new drama CMD

--- a/view/src/App.css
+++ b/view/src/App.css
@@ -69,7 +69,7 @@ a {
   object-fit: contain;
 }
 .bg_pallete_1 {
-  background-color: #141414;
+  background-color: #141414 !important;
   color: white;
 }
 
