--- a/view/src/App.css
+++ b/view/src/App.css
@@ -128,6 +128,15 @@ select option {
   border-radius: 15px !important;
 }
 
+.search_result_img {
+  width: 100% !important;
+}
+@media (min-width: 576px) {
+  .search_result_img {
+    width: 100px !important;
+  }
+}
+
 /* Font Size Breakpoint */
 @media (max-width: 576px) {
   .fs-sm-1 {
