--- a/view/src/App.css
+++ b/view/src/App.css
@@ -131,6 +131,11 @@ select option {
 .search_result_img {
   width: 100% !important;
 }
+
+.swal2-container {
+  z-index: 1000000000000000;
+}
+
 @media (min-width: 576px) {
   .search_result_img {
     width: 100px !important;
