--- a/view/src/components/componentsStyle/Navigation.css
+++ b/view/src/components/componentsStyle/Navigation.css
@@ -2,12 +2,17 @@
 .navbar-custom {
   background-color: #212121 !important;
   color: white;
-  position: relative; /* Add this to the navbar */
 }
 
-.navbar-custom .navbar-brand {
+.navbar-custom .navbar-brand,
+.navbar-custom .nav-link {
   color: white;
-  position: relative; /* Add this to the navbar brand */
+  transition: color 0.3s; /* Tambahkan efek transisi */
+}
+
+.navbar-custom .nav-link:hover,
+.navbar-custom .nav-link.active {
+  color: wheat; /* Cream color saat hover atau aktif */
 }
 
 .dropdown-toggle {
@@ -16,7 +21,13 @@
 
 .submit {
   background-color: #525c91;
+  transition: background-color 0.3s; /* Add transition for smooth color change */
 }
+
+.submit.active {
+  background-color: wheat; /* Change color when the button is active */
+}
+
 
 .search-icon {
   color: white;
@@ -35,14 +46,12 @@
   display: flex;
   align-items: center !important;
   justify-content: center !important;
-  position: relative; /* Ensure the brand stays centered */
 }
 
 @media (max-width: 991px) {
   .navbar-brand {
     flex-grow: 1;
     justify-content: center;
-    position: relative; /* Ensure the brand stays centered on mobile */
   }
 }
 
@@ -50,5 +59,4 @@
   display: flex;
   justify-content: center; /* Center items horizontally */
   align-items: center; /* Center items vertically */
-  position: relative; /* Align elements within this container */
 }
