--- a/view/index.html
+++ b/view/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="images/logo.png" />
+    <link rel="icon" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlutoCinema</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,6 +18,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
